--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     Is Mark Anthony Drunk? 
     <h2 id="response"></h2>
 
+    <footer>This is the footer</footer>
+
     <script src="index.js"></script>
 </body>
 </html>
