--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     Is Mark Anthony Drunk? 
     <h2 id="response"></h2>
 
+    <h2>Mo is a great work partner</h2>
     <footer>This is the footer</footer>
-
     <script src="index.js"></script>
 </body>
 </html>
